--- a/related.tex
+++ b/related.tex
@@ -1,12 +1,9 @@
 \section{Related Work}
 \label{sec:related}
 
-The problem of coursework similarity has been studied in the context of course recommendation system. Bendakir et al.~\cite{bendakir2006using} proposed a recommendation system based on decision tree of course history. Their approach, however, does not consider students' grades at all. Thus, their tool may wrongly correlate totally different courses simply due to historical mistakes. Sandvig et al.~\cite{sandvig2005aacorn} did use the GPA information, but GPA, as an average metric, doesn't say much about each specific class. 
+Although the problem of understanding how a building behaves during an earthquake has long been studied.
+In order to investigate the performance of a building on a shake table, in 2007, engineers built a seven-story building for testing and re-creation of a seismic response of it based on recorded data of a full scale shake table test~\cite{Chourasia:2007:DRS:1247238.1247243}. Here, we are concerned about the relationship between the different physical measurements, as well as with the understanding of how these patterns are similar or different across different earthquakes.
 
-When it comes to the visualization problem. Since our goal is to cluster similar classes together, a node-link diagram naturally jumps into our mind. D3 library has a force-directed graph that is close to our needs. But we are hesitant about its fisheye distortion and curved link variant because these variants make it hard to click on nodes or edges for further details. We are also aware that force directed drawing is criticized for local minima. A multilevel approach~\cite{walshaw2000multilevel} might fix it but we are not focusing on algorithmic style improvement in this proposal.
+At the same time, visual exploration of multivariate data sets is an integral part of scientific visualization. As in most real world phenomena, there exist multiple factors associated with the complex interactions of different variables. To gain an in-depth understanding of a scientific process, the relationship among the variables needs to be thoroughly investigated. Biswas et al.~\cite{Biswas:2013:AIFEMDS:1077-2626} propose a framework to classify isocontours of variables based on the relationship between them and users can explore the multivariate data sets using their interface. Comparing time series data is another great challenge. Kernel methods, such as Support Vector Machines and Gaussian Process have become classical data-analysis tools. Vert et al. propose an alignment kernel for time series which is widely used when comparing time series~\cite{DBLP:journals/corr/abs-cs-0610033}.
 
-Other well-known techniques include Rheingold-Tilford Tree, whose tree hierarchy is too constrained to express clustered nodes~\cite{Reingold:1981:TDT:1313316.1313481}; arc diagram, whose purpose is to highlight existing cycles. We investigate but decide not to use them. 
 
-Eventually, we decided to use adjacency matrix instead of node-link diagrams, inspired by the study of matrix and graphs~\cite{Ghoniem:2004:CRG:1038262.1038777,VanHam:2003:UMC:1947368.1947409}. We also looked at the admirable work by F.Du et al.~\cite{du2016vis}. Their tool looks similar to ours at first glance but aims at student progress perspective rather than our course content centered perspective. However, we find their visual design interesting and could be one potential future direction of our tool.
-
-We heavily use the well-known d3 library~\cite{Bostock:2011:DDD:2068462.2068631} to create our tool.
