--- a/report.bib
+++ b/report.bib
@@ -198,6 +198,7 @@ location = {Baltimore, Maryland, USA},
 publisher = {IEEE},
 keywords = {temporal event sequences, recommender systems, prescriptive analytics, visual analytics},
 }
+
 @article{Bostock:2011:DDD:2068462.2068631,
  author = {Bostock, Michael and Ogievetsky, Vadim and Heer, Jeffrey},
  title = {D3 Data-Driven Documents},
@@ -217,5 +218,78 @@ keywords = {temporal event sequences, recommender systems, prescriptive analytic
  address = {Piscataway, NJ, USA},
  keywords = {Information visualization, user interfaces, toolkits, 2D graphics.},
 } 
+
+@article{Biswas:2013:AIFEMDS:1077-2626,
+	author = {Biswas, Ayan and Dutta, Soumya and Shen, Han-Wei and Woodring, Jonathan},
+	title = {An Information-Aware Framework for Exploring Multivariate Data Sets},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	issue_date = {December 2013},
+	volume = {19},
+	number = {12},
+	month = dec,
+	year = {2013},
+	issn = {1077-2626},
+	pages = {2683 - 2692},
+	numpages = {9},
+	url = {http://dx.doi.org/10.1109/TVCG.2013.133},
+	doi = {10.1109/TVCG.2013.133},
+	publisher = {IEEE},
+	keywords = {Uncertainty,Mutual information,	Information technology,	Entropy,	Isosurfaces,Layout.},
+} 
+
+@article{Chourasia:2007:DRS:1247238.1247243,
+	author = {Chourasia, Amit},
+	title = {Digital Re-creation of a Seven-story Building Shake During an Earthquake},
+	journal = {Crossroads},
+	issue_date = {March 2007},
+	volume = {13},
+	number = {3},
+	month = mar,
+	year = {2007},
+	issn = {1528-4972},
+	pages = {5--5},
+	numpages = {1},
+	url = {http://doi.acm.org/10.1145/1247238.1247243},
+	doi = {10.1145/1247238.1247243},
+	acmid = {1247243},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
+@article{DBLP:journals/corr/abs-cs-0610033,
+	author    = {Marco Cuturi and
+	Jean{-}Philippe Vert and
+	Oystein Birkenes and
+	Tomoko Matsui},
+	title     = {A kernel for time series based on global alignments},
+	journal   = {CoRR},
+	volume    = {abs/cs/0610033},
+	year      = {2006},
+	url       = {http://arxiv.org/abs/cs/0610033},
+	timestamp = {Wed, 07 Jun 2017 14:42:03 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-cs-0610033},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{conf/icml/KondorJ03,
+	added-at = {2013-02-19T00:00:00.000+0100},
+	author = {Kondor, Risi and Jebara, Tony},
+	biburl = {https://www.bibsonomy.org/bibtex/28c2a8664e704c29ed5a31cf3407e62de/dblp},
+	booktitle = {ICML},
+	crossref = {conf/icml/2003},
+	editor = {Fawcett, Tom and Mishra, Nina},
+	ee = {http://www.aaai.org/Library/ICML/2003/icml03-049.php},
+	interhash = {d26bf2fe2d9a970ac966e84c14761506},
+	intrahash = {8c2a8664e704c29ed5a31cf3407e62de},
+	isbn = {1-57735-189-4},
+	keywords = {dblp},
+	pages = {361-368},
+	publisher = {AAAI Press},
+	timestamp = {2013-02-20T11:37:11.000+0100},
+	title = {A Kernel Between Sets of Vectors.},
+	url = {http://dblp.uni-trier.de/db/conf/icml/icml2003.html#KondorJ03},
+	year = 2003
+}
+
+
 
 
