--- a/report.tex
+++ b/report.tex
@@ -1,5 +1,5 @@
-\documentclass[journal]{vgtc}                % final (journal style)
-%\documentclass[review,journal]{vgtc}         % review (journal style)
+\documentclass{vgtc}                % final (journal style)
+%documentclass[review,journal]{vgtc}         % review (journal style)
 %\documentclass[widereview]{vgtc}             % wide-spaced review
 %\documentclass[preprint,journal]{vgtc}       % preprint (journal style)
 
@@ -26,7 +26,7 @@
   \usepackage{graphicx}                % allow us to embed graphics files
   \DeclareGraphicsExtensions{.eps}     % for pure latex we expect eps files
 \fi%
-\usepackage[justification=centering]{caption}
+\usepackage{caption}
 %% it is recomended to use ``\autoref{sec:bla}'' instead of ``Fig.~\ref{sec:bla}''
 \graphicspath{{figures/}{pictures/}{images/}{./}} % where to search for the images
 
@@ -41,59 +41,49 @@
 %% If you are submitting a paper to a conference for review with a double
 %% blind reviewing process, please replace the value ``0'' below with your
 %% OnlineID. Otherwise, you may safely leave it at ``0''.
-\onlineid{0}
+%\onlineid{0}
 
 %% declare the category of your paper, only shown in review mode
 \vgtccategory{Research}
 
 %% Paper title.
-\title{Coursim: A Tool For Detecting Course Dependency}
+\title{Visualizing Earthquake Simulation Data}
 
 %% This is how authors are specified in the journal style
 
 %% indicate IEEE Member or Student Member in form indicated below
-\author{Yang Liu, Zhenge Zhao}
-\authorfooter{
-%% insert punctuation at end of each item
-\item
- E-mail:[yangliu2014,zhengezhao]@email.arizona.edu.
-}
+\author{Zhenge Zhao\thanks{zhengezhao@email.arizona.edu}, Youhao Wei,\thanks{youhaowei@email.arizona.edu} Joshua A. Levine\thanks{josh@email.arizona.edu}, Matthew Berger\thanks{matthewberger@email.arizona.edu}, Danilo Motta\thanks{ddanilomotta@gmail.com}, Carlos Scheidegger\thanks{cscheid@email.arizona.edu}}
+%%\affiliation{\scriptsize University of Arizona}
+
 
 %other entries to be set up for journal
 %\shortauthortitle{Firstauthor \MakeLowercase{\textit{et al.}}: Paper Title}
 
 %% Abstract section.
 \abstract{
-Course Dependency can greatly affect a student's grade because of their content. Making one course the prerequisite of another may improve the student's performance in the latter course dramatically. But given the vast number of courses in a university, finding a good prerequisite calls for expertise in all the courses. It's a challenge for not only the student herself, but sometimes the academic advisor if he happens to know little about the particular course. 
-
-We proposed to compare students' historical grades to see the effect of setting prerequisite course. The visualization tool will use this as the weight in the correlation matrix. The tool includes a main view that shows the global relationship between each pair of courses, and a side view that shows details of one particular pair chosen by user.
-
-We haven't got to the evaluation part yet. Plans will be discussed in Section~\ref{sec:vis}
+  Computer simulations of the effect of earthquakes on built structures promise to let engineers understand different trade offs and designs at an attractively low cost.
+  In this scenario, the bottleneck for the expert is one of \emph{data understanding}: how do different building designs respond to different earthquakes?
+  What do the building failure modes have in common, and how does this compare to theoretical predictions?
+  The way in which a building responds to an earthquakes is complex and controlled by different factors.
+  In this poster, we present ongoing work in building a system for interactive visualization of earthquake simulation data, in collaboration with civil engineers who have run thousands of simulations, varying the height of the simulated buildings, ground acceleration, and building structure design.
+  We describe the challenges in the visualization of such multivariate time series data, and some of our proposed solutions.
 } % end of abstract
 
 %% Keywords that describe your work. Will show as 'Index Terms' in journal
 %% please capitalize first letter and insert punctuation after last keyword
-\keywords{Visualization tool, Benefit Measurement, Acdemic Advising}
+%%\keywords{Visualization, Multivariate time series, Earthquake Simulation, NLP, Kernel}
 
 %% ACM Computing Classification System (CCS). 
 %% See <http://www.acm.org/class/1998/> for details.
 %% The ``\CCScat'' command takes four arguments.
 
-\CCScatlist{CHANGE ME:
- \CCScat{K.6.1}{Management of Computing and Information Systems}%
-{Project and People Management}{Life Cycle};
- \CCScat{K.7.m}{The Computing Profession}{Miscellaneous}{Ethics}
-}
+\CCScatlist{Visualization, Multivariate time series, Earthquake Simulation, NLP, Kernel}
+
 
 % Comment below to remove teaser figure.
-   \teaser{
-   \centering
-   \includegraphics[width=16cm]{figs/perfvis}
-   \caption{The interface of Coursim: (A) adjacency matrix view to show the overall associations between all the courses in CS department; (B) bar chart view to depict top 10 courses which benefit the chosen course; (C) parallel coordinate view to demonstrates all the transition of scores of students taking both two courses}
-  }
 
-%% Uncomment below to disable the manuscript note
-%\renewcommand{\manuscriptnotetxt}{}
+%%Uncomment below to disable the manuscript note
+\renewcommand{\manuscriptnotetxt}{}
 
 %% Copyright space is enabled by default as required by guidelines.
 %% It is disabled by the 'review' option or via the following command:
@@ -112,22 +102,22 @@ We haven't got to the evaluation part yet. Plans will be discussed in Section~\r
 
 %% the only exception to this rule is the \firstsection command
 
-
 \firstsection{Introduction} % or "Motivation"
+
 \label{sec:myintro}
 \maketitle
 
 \input{intro}
 
-\input{background}
+%\input{background}
 
 \input{related}
 
 \input{vis}
 
-\input{evaluation}
+%\input{evaluation}
 
-\input{discussion}
+%\input{discussion}
 
 \input{conclusion}
 
